--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "laundarytalks",
+  "name": "mimaansa",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "motion": "^12.23.12",
+    "next": "15.3.5",
+    "radix-ui": "^1.4.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.5"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
