--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "15.3.5",
     "radix-ui": "^1.4.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.16.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
