--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-checkbox": "^1.3.3",
+    "@studio-freight/lenis": "^1.0.42",
     "lucide-react": "^0.539.0",
     "motion": "^12.23.12",
     "next": "15.3.5",
