--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@radix-ui/react-checkbox": "^1.3.3",
     "@studio-freight/lenis": "^1.0.42",
     "lucide-react": "^0.539.0",
+    "mongodb": "^6.18.0",
     "motion": "^12.23.12",
     "next": "15.3.5",
+    "nodemailer": "^7.0.5",
     "radix-ui": "^1.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.62.0",
     "react-intersection-observer": "^9.16.0",
+    "xlsx": "^0.18.5",
     "yup": "^1.7.0"
   },
   "devDependencies": {
